fixed button spacing for question detail page

--- a/public/stylesheets/main.css
+++ b/public/stylesheets/main.css
@@ -472,6 +472,7 @@ select {
   font-size: 1.5em;
   overflow-wrap: break-word;
   max-width: 100%;
+  width: 620px;
 }
 
 .questionTextStaticMain {
@@ -481,9 +482,7 @@ select {
   color: white;
   font-size: 1.5em;
   overflow-wrap: break-word;
-  max-width: 100%;
-
-  /* width: 100%; */
+  width: 620px;
 }
 
 .questionMetaDiv {
